# arch-arm

./: CMakeLists.txt
data/: ARMv7hf-Clang.cmake  ARMv7hf.cmake  CMakeLists.txt  fix-lib-searchpath.hook  makepkg-arm-general.conf.in  makepkg-arm.conf  makepkg-arm.conf.in  makepkg-armv7.conf.in  makepkg-armv8.conf.in  pacman-arm-options.conf.in  pacman-arm.conf  pacman-arm.conf.in  pacman-armv7.conf.in  pacman-armv8.conf.in
data/cmake/: ARMv7hf-Clang.cmake  ARMv7hf.cmake  ARMv8-Clang.cmake  ARMv8.cmake
qemu-wrapper/: CMakeLists.txt  wrapper.cpp
scripts/: CMakeLists.txt  arch-arm-cross-config.sh.in  fix-lib-searchpath  makepkg-arm-cross  makepkg-arm-cross.in  pacman-arm-cross  pacman-arm-cross.in  prepare-chroot  prepare-chroot.in  prepare-qemu  prepare-qemu-aarch64  prepare-qemu-arm  prepare-qemu.in  write-cmd
